vue origin-code

--- a/01_Vue_basic/01_计数器-Vue3.html
+++ b/01_Vue_basic/01_计数器-Vue3.html
@@ -22,15 +22,21 @@
       }
     </script>
     <div id="app"></div>
+    <template id="noah">
+      <h1>{{count}}</h1>
+      <button @click="add">+1</button>
+      <button @click="sub">-1</button>
+    </template>
+    <!-- <script type="x-template" id="noah">
+      <h1>{{count}}</h1>
+      <button @click='add'>+1</button>
+      <button @click='sub'>-1</button>
+    </script> -->
     <script type="module">
       // import { createApp, ref } from 'https://unpkg.com/vue@3/dist/vue.esm-browser.js'
       import { createApp, ref } from 'vue'
       createApp({
-        template: `
-          <h1>{{count}}</h1>
-          <button @click='add'>+1</button>
-          <button @click='sub'>-1</button>
-        `,
+        template: `#noah`,
         setup() {
           const count = ref(0)
           function add() {
