--- a/01_Vue_basic/01_计数器-Vue3.html
+++ b/01_Vue_basic/01_计数器-Vue3.html
@@ -26,6 +26,7 @@
       <h1>{{count}}</h1>
       <button @click="add">+1</button>
       <button @click="sub">-1</button>
+      <span v-pre>{{ this will not be compiled }}</span>
     </template>
     <!-- <script type="x-template" id="noah">
       <h1>{{count}}</h1>
